# wordpress-logins-finder

./: .gitignore  env.example  pyproject.toml
tests/: test_wordpress_logins_finder.py
wordpress_logins_finder/: logins_finder.py
wordpress_logins_finder/utils/: constants.py  logger_formater.py  request_manager.py
