[tool.poetry]
name = "wordpress-logins-finder"
version = "0.1.0"
description = ""
authors = ["jffin <22579497+jffin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
yarl = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
